<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".LoginActivity">



    <EditText

        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/edt_background"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textWebEmailAddress"
        android:paddingStart="@dimen/pading_start_input"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/margin_top_input"
        android:layout_below="@+id/email"
        android:hint="@string/password"
        android:background="@drawable/edt_background"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingStart="@dimen/pading_start_input"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btn_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="@dimen/margin_top_input"
        android:layout_marginRight="30dp"
        android:background="@drawable/btn_background"
        android:text="@string/log_in"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_input"
        android:layout_below="@+id/btn_log_in">


        <TextView
            android:id="@+id/title_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="end"
            android:textSize="@dimen/txt_size"
            android:text="@string/log_txt_preview" />

        <TextView
            android:id="@+id/signup_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="0.8"
            android:gravity="start"
            android:text="@string/sign_up"
            android:textColor="@color/blue"
            android:textSize="@dimen/txt_size" />
    </LinearLayout>


</RelativeLayout>